apps/base/pocketid/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pocketid
  labels:
    pod-security.kubernetes.io/enforce: privileged
