apps/base/pocketid/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketid
  namespace: pocketid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app: pocketid
    spec:
      containers:
        - name: pocketid
          image: ghcr.io/pocket-id/pocket-id:latest
          ports:
            - containerPort: 1411
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pocketid-data
